--- a/pom.xml
+++ b/pom.xml
@@ -191,9 +191,9 @@
                                 </goals>
                             </execution>
                         </executions>
-<!--                        <configuration>-->
-<!--                            <skip>true</skip>-->
-<!--                        </configuration>-->
+                        <configuration>
+                            <skip>true</skip>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
